Closed
Bug 591558
Opened 14 years ago
Closed 14 years ago
Windowed plugin frames extend into browser chrome glass
Categories
(Core :: Widget: Win32, defect)
Tracking
()
RESOLVED
FIXED
Tracking | Status | |
---|---|---|
blocking2.0 | --- | beta5+ |
People
(Reporter: jimm, Assigned: bas.schouten)
References
Details
Attachments
(2 files)
78.27 KB,
image/jpeg
|
Details | |
2.35 KB,
patch
|
roc
:
review+
|
Details | Diff | Splinter Review |
Post the landing of bug 130078. This may be a variation on bug 574957, which now can't be reproduced.
str:
1) open youtube on a glass desktop
2) size the window horizontally so that a youtube video is clipped
3) scroll the page up
Reporter | ||
Updated•14 years ago
|
Summary: Windowed plugin frames extend browser chrome glass → Windowed plugin frames extend into browser chrome glass
Comment 2•14 years ago
|
||
I'm almost sure I saw this before 130078 landed, and thought it was bug 574957 manifesting differently but I see it's actually a different thing (I can't reproduce 574957 either).
Assignee | ||
Comment 3•14 years ago
|
||
Since landing of 130078 we no longer want to consider child windows as our opaque area. This patch removes that code.
Comment on attachment 470155 [details] [diff] [review]
Don't consider child windows in opaque area
I just love fixing bugs by deleting code!
Attachment #470155 -
Flags: review?(roc) → review+
blocking2.0: ? → beta5+
Assignee | ||
Comment 5•14 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•