Bug 591558: Don't consider child windows in opaque area. r=roc a=blocking-beta5